add PayPal and simplify MoMo payment processing